# Elio_Agent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  START.md  analyze_stream.py  client.html  client.ts  litellm_config.yaml  main_loop.md  map.md  memory.md  package.json  plan.md  prompt.md  prompts.md  test-client.ts  test_stream.py  tips.md  voice.json
.github/workflows/: release-desktop.yml
data/.memory/: events.jsonl
data/memory/: edges.jsonl  inverted_index.json
desktop/: package.json
desktop/electron/: main.ts
desktop/electron/ipc/: channels.ts  (+2 more)
docs/desktop/: 04-installation.md  06-h5-access.md
elio-adapters/core/: Cargo.toml
elio-adapters/core/src/: lib.rs
elio-adapters/dingtalk/: Cargo.toml
elio-adapters/feishu/: Cargo.toml
elio-adapters/telegram/: Cargo.toml
elio-adapters/wechat/: Cargo.toml
elio-client/: Cargo.toml
elio-client/src/: main.rs
elio-core/: Cargo.toml
elio-core/src/: lib.rs  llm.rs  log.rs  mainloop.rs  prompt.rs  registry.rs  tool.rs  worldview.rs
elio-core/src/memory/: bridge.rs  disk.rs  fast.rs  graph.rs  index.rs  mod.rs  slow.rs  system.rs  traversal.rs  types.rs
elio-core/src/memory/prompts/: mod.rs
elio-desktop/: Cargo.toml  tauri.conf.json
elio-desktop/capabilities/: default.json
elio-desktop/frontend/: index.html
elio-desktop/src/: lib.rs  main.rs
elio-server/: Cargo.toml
elio-server/config/: default.toml  default.toml.example
elio-server/frontend/: index.html
elio-server/scripts/: test_input.json  tts-bridge.ts
elio-server/src/: config.rs  main.rs  session.rs  tts.rs  ws.rs
elio-server/src/routes/: mod.rs
elio-tools/: Cargo.toml
elio-tools/src/: lib.rs
logs/: logview_gui.py
prompts/: edit_prompts.py  identity.txt  language.txt  speech_blocks.txt  tools_task.txt
prompts/prompts/: agent_fork.txt  speech_blocks.txt  tone_emoji.txt  tools_dedicated.txt
scripts/: release-update-metadata.test.ts
scripts/pr/: release-workflow.test.ts
scripts/quality-gate/: coverage.test.ts
src/: commands.ts  main.tsx  query.ts  setup.ts  tasks.ts
src/bootstrap/: state.ts
src/bridge/: bridgeConfig.ts  bridgeDebug.ts  bridgeEnabled.ts  bridgeMessaging.ts  bridgePermissionCallbacks.ts  bridgeStatusUtil.ts  envLessBridgeConfig.ts  inboundAttachments.ts  inboundMessages.ts  jwtUtils.ts  pollConfig.ts  replBridge.ts  replBridgeHandle.ts  trustedDevice.ts  types.ts
src/cli/: print.ts  remoteIO.ts  structuredIO.ts
src/commands/: ultraplan.tsx
src/components/: Spinner.tsx
src/constants/: cyberRiskInstruction.ts  product.ts  prompts.ts
src/elio/: WorldviewBuffer.ts  autoAdjust.ts  index.ts  worldview.ts
src/entrypoints/: cli.tsx  init.ts
src/hooks/: useRemoteSession.ts  useReplBridge.tsx
src/log-system/: index.ts  integration.ts  types.ts
src/memdir/: findRelevantMemories.ts  memdir.ts  memoryAge.ts  memoryScan.ts  memoryTypes.ts  paths.ts  teamMemPaths.ts
src/query/: stopHooks.ts
src/screens/: REPL.tsx
src/server/: h5AccessPolicy.ts  index.ts  router.ts
src/state/: AppStateStore.ts
src/tasks/: types.ts
src/utils/: backgroundHousekeeping.ts  boundedUuidSet.ts  collapseReadSearch.ts  config.ts  crypto.ts  jwtUtils.ts  sessionFileAccessHooks.ts  shimmer.ts
(+150 files in other folders)
