[workspace]
resolver = "2"
members = [
    "elio-core",
    "elio-tools",
    "elio-server",
    "elio-client",
    "elio-adapters/core",
    "elio-adapters/feishu",
    "elio-adapters/dingtalk",
    "elio-adapters/telegram",
    "elio-adapters/wechat",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
