[package]
name = "elio-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
fastrand = "2"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
