[package]
name = "elio-server"
version.workspace = true
edition.workspace = true

[dependencies]
elio-core = { path = "../elio-core" }
elio-tools = { path = "../elio-tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
