[package]
name = "elio-tools"
version.workspace = true
edition.workspace = true

[dependencies]
elio-core = { path = "../elio-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json"] }
